Fix #26917 Tax rate zip/post range check box alignment issue

--- a/app/design/adminhtml/Magento/backend/Magento_Tax/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Tax/web/css/source/_module.less
@@ -25,3 +25,11 @@
         font-size: 1.3rem;
     }
 }
+
+.tax-rate-form {
+    .admin__fieldset > .admin__field > .admin__field-control {
+        input[type='checkbox'] {
+            margin: 8px 0 0 0;
+        }
+    }
+}
